[package]
name = "day03"
version = "0.1.0"
authors = ["Paweł Romanowski <pawroman@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
failure = "0.1.3"
itertools = "0.7.11"
lazy_static = "1.2.0"
ndarray = "0.12.1"
num-traits = "0.2.6"
regex = "1.1.0"

[dev-dependencies]
assert_cmd = "0.10.2"
tempfile = "3.0.5"
